--- a/coursera-site/index.html
+++ b/coursera-site/index.html
@@ -7,6 +7,7 @@
     <title>test</title>
 </head>
 <body>
-    <h1>Hello Coursera! Is a great course</h1>
+    <h1>Hello Coursera! Is a great course!</h1>
+    <h2>This is a great way to keep everything updated</h2>
 </body>
 </html>
